# Aleksandr_strulkov_course-work5

./: .gitignore  README.md  pyproject.toml
src/: DBManager.py  class_api_hh.py  database_creation.py  main.py
